SERVER-79864 Disable TTL on time-series colls requiring extended range

(cherry picked from commit aa87caf6b24095a6e907d76c9b27fc44a63ed7d3)