src/mongo/db/ttl.cpp
@@ -295,6 +295,10 @@ private:
             return;
         }
 
+        if (coll->getRequiresTimeseriesExtendedRangeSupport()) {
+            return;
+        }
+
         ResourceConsumption::ScopedMetricsCollector scopedMetrics(opCtx, nss.db().toString());
 
         const auto& collection = coll.getCollection();
